# FaceTracker

./: .gitignore  CMakeLists.txt  Makefile  readme.md
include/FaceTracker/: CLM.h  Timer.h
src/: CMakeLists.txt
src/exe/: CMakeLists.txt  face_tracker.cc
src/lib/: CLM.cc  CMakeLists.txt  PDM.cc  Patch.cc  Tracker.cc
